--- a/Data_visualization/3.3-Highlighting.qmd
+++ b/Data_visualization/3.3-Highlighting.qmd
@@ -199,6 +199,33 @@ Trunks |>
 ```
 
 
+## Create an explicit color map function
+
+```{r}
+#| echo: true
+#| output-location: slide
+
+tree_color_map <- function(){
+  cmap <- ggplot2::scale_color_manual(
+    name = "Species",
+    values = c("Acer saccharinum" = "red",
+               "Acer rubrum" = "orange",
+               "Acer platanoides" = "blue",
+               "Acer saccarum" = "purple"),
+    guide = NULL)
+  return(cmap)
+}
+
+Trunks |> 
+  ggplot(aes(x = Species, y = DBH, color = Species)) +
+  geom_violin() +
+  geom_sina(seed = 74645) +
+  tree_color_map() +
+  theme(axis.text.x = element_text(face = "italic"))
+
+```
+
+
 ## Labeling points with [ggrepel](https://ggrepel.slowkow.com/)
 
 ```{r}
