--- a/Bayesian_inference_1/2.4-Diagnostics_and_posteriors.qmd
+++ b/Bayesian_inference_1/2.4-Diagnostics_and_posteriors.qmd
@@ -103,6 +103,7 @@ plot_grid(p1, p2)
 Note the correspondence to the model statements.
 
 ```{r}
+#| label: ulam_model
 #| echo: true
 #| output-location: slide
 
